force-app/main/default/objects/Maintenance_Part__c/Maintenance_Part__c.object-meta.xml
<CustomObject>
    <label>Maintenance Part</label>
    <nameField>
        <displayFormat>MP-{0000}</displayFormat>
        <label>Sr.No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Maintenance Parts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>