force-app/main/default/objects/Maintenance_Part__c/fields/Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Part_Number__c</fullName>
    <label>Part Number</label>
    <referenceTo>Part_Inventory__c</referenceTo>
    <relationshipLabel>Maintenance Parts</relationshipLabel>
    <relationshipName>Maintenance_Parts</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>