force-app/main/default/objects/Maintenance_Part__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Maintenance_Request_Number__c</columns>
    <columns>Part_Number__c</columns>
    <columns>Qty_Utilized__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>